# electronic

./: .gitignore  CMakeLists.txt  LISENCE  README.md  main.cpp
src/: Circuit.cpp  Circuit.h  Element.cpp  Element.h  Resistor.cpp  Resistor.h  VSource.cpp  VSource.h
src/circuit/: Circuit.cpp  Circuit.h  Node.cpp  Node.h
src/component/: ComponentStore.h  Parameters.h  Position.h  ResistorParameters.h
src/components/: Element.h  Resistor.cpp  Resistor.h
src/entity/: Entity.cpp  Entity.h  Node.cpp  Node.h
src/gui/: MainGui.cpp  MainGui.h
src/system/: PositionSystem.cpp  PositionSystem.h  ResistorSystem.cpp  ResistorSystem.h
